--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,24 @@
 version: 2.1
+orbs:
+  aws-cli: circleci/aws-cli@0.1.18
 jobs:
   build_project:
     working_directory: ~/circle-ci-s3-deploy
     docker:
-      - image: node:16.16.0
+      - image: node:10.15.3
     steps:
       - checkout
-      - run:
+      - run: 
           name: Installing dependencies
-          command: npm
-      - run:
+          command: yarn
+      - run: 
           name: Building project
-          command: npm run build
+          command: yarn build
       - persist_to_workspace:
           root: .
           paths:
             - .
+
   deploy_project:
     executor: aws-cli/default
     steps:
@@ -26,6 +29,7 @@ jobs:
       - run:
           name: Upload file to S3
           command: aws s3 sync ./dist/ s3://circleci-s3-integration-bucket --delete
+
 workflows:
   version: 2
   build:
