--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,52 +1,23 @@
 version: 2.1
-orbs:
-  aws-cli: circleci/aws-cli@0.1.18
 jobs:
-  build_project:
-    working_directory: ~/circle-ci-s3-deploy
+  run_tests:
     docker:
-      - image: node:10.15.3
+      - image: circleci/node:12
     steps:
       - checkout
-      - run: 
-          name: Installing dependencies
-          command: yarn
-      - run: 
-          name: Building project
-          command: yarn build
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
-
-  deploy_project:
-    executor: aws-cli/default
-    steps:
-      - attach_workspace:
-          at: .
-      - aws-cli/setup:
-          profile-name: default
       - run:
-          name: Upload file to S3
-          command: aws s3 sync ./dist/ s3://circleci-s3-integration-bucket --delete
-
+          name: Install npm dependencies
+          command: |
+            npm install --save
+      - run:
+          name: Run Unit Tests
+          command: |
+            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
+      - store_test_results:
+          path: test-results
+      - store_artifacts:
+          path: test-results
 workflows:
-  version: 2
-  build:
+  build_test:
     jobs:
-      - build_project:
-          filters:
-              branches:
-                ignore: /.*/
-              tags:
-                only: /.*/
-
-      - deploy_project:
-          requires:
-            - build_project
-          context: aws-context
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /.*/
+      - run_tests
