--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,24 @@
 version: 2.1
+orbs:
+  aws-cli: circleci/aws-cli@0.1.18
 jobs:
-  run_tests:
+build_project:
+    working_directory: ~/circle-ci-s3-deploy
     docker:
-      - image: circleci/node:12
+      - image: node:10.15.3
     steps:
       - checkout
-      - run:
-          name: Install npm dependencies
-          command: |
-            npm install --save
-      - run:
-          name: Run Unit Tests
-          command: |
-            ./node_modules/mocha/bin/mocha test/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results
-      - store_test_results:
-          path: test-results
-      - store_artifacts:
-          path: test-results
+      - run: 
+          name: Installing dependencies
+          command: yarn
+      - run: 
+          name: Building project
+          command: yarn build
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
 workflows:
   build_test:
     jobs:
-      - run_tests
+      - build_project
