--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
       - checkout
       - run: 
           name: Installing dependencies
-          command: yarn
+          command: npm install --save
       - run: 
           name: Building project
-          command: yarn build
+          command: npm run build
       - persist_to_workspace:
           root: .
           paths:
