--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,18 +32,4 @@ workflows:
   build_test:
     jobs:
       - build_project
-        filters:
-          branches:
-            ignore: /.*/
-            tags:
-              only: /.*/
-
-      - deploy_project:
-          requires:
-            - build_project
-          context: aws-context
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /.*/
+      - deploy_project
