--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ workflows:
   build_test:
     jobs:
       - build_project
-      - deploy_project
+      - deploy_project:
         requires:
           - build_project
         context: aws-context
