--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Upload file to S3
           command: |
-            if [[ $CIRCLE_BRANCH == "master" ]]; then
+            if [[ $CIRCLE_BRANCH == "main" ]]; then
               echo "Deploying to main s3 bucket!"
               aws s3 sync ./dist s3://circleci-s3-cloudfront-integration-static-resources --delete 
             else
