--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ workflows:
             branches:
               only:
                 - main
+                - staging
       - deploy_project:
           requires:
             - build_project
