--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,20 +28,18 @@ jobs:
       - run:
           name: Upload file to S3
           command: |
+            mv ./dist/assets/index-*.css ./dist/assets/index-$CIRCLE_BRANCH.css
+            mv ./dist/assets/index-*.js ./dist/assets/index-$CIRCLE_BRANCH.js 
             if [[ $CIRCLE_BRANCH == "main" ]]; then
               echo "Deploying to main s3 bucket!"
-              cp ./dist/assets/index-*.css ./dist/assets/index-main.css
-              cp ./dist/assets/index-*.js ./dist/assets/index-main.js
               aws s3 sync ./dist s3://circleci-s3-cloudfront-integration-static-resources --delete 
             else
               echo "Deploying to staging s3 bucket!"
-              cp ./dist/assets/index-*.css ./dist/assets/index-staging.css
-              cp ./dist/assets/index-*.js ./dist/assets/index-staging.js
               aws s3 sync ./dist s3://circleci-s3-cloudfront-integration-staging-static-resources --delete 
             fi
                  
 workflows:
-  build_test:
+  build_deploy:
     jobs:
       - build_project:
           filters:
